// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BiosCard should not render hasReleaseDate 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Vendor title"
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                aria-label="Vendor value"
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                aria-label="Version title"
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                aria-label="Version value"
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should not render hasVendor 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Version title"
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                aria-label="Version value"
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                aria-label="Release date title"
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                aria-label="Release date value"
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should not render hasVersion 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Vendor title"
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                aria-label="Vendor value"
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                aria-label="Release date title"
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                aria-label="Release date value"
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render correctly - no data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Vendor title"
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                aria-label="Vendor value"
                class=""
                data-ouia-component-id="Vendor value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Version title"
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                aria-label="Version value"
                class=""
                data-ouia-component-id="Version value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="Release date title"
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                aria-label="Release date value"
                class=""
                data-ouia-component-id="Release date value"
              >
                <div
                  class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-u-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render correctly with data - wrong date 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Vendor title"
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                aria-label="Vendor value"
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                aria-label="Version title"
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                aria-label="Version value"
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                aria-label="Release date title"
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                aria-label="Release date value"
                class=""
                data-ouia-component-id="Release date value"
              >
                Not available
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render correctly with data 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Vendor title"
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                aria-label="Vendor value"
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                aria-label="Version title"
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                aria-label="Version value"
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                aria-label="Release date title"
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                aria-label="Release date value"
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`BiosCard should render extra 1`] = `
<DocumentFragment>
  <article
    class="pf-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-l-stack pf-m-gutter"
      >
        <div
          class="pf-l-stack__item"
        >
          <div
            class="pf-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              BIOS
            </h1>
          </div>
        </div>
        <div
          class="pf-l-stack__item pf-m-fill"
        >
          <div
            class="pf-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="Vendor title"
                class=""
                data-ouia-component-id="Vendor title"
              >
                Vendor
              </dt>
              <dd
                aria-label="Vendor value"
                class=""
                data-ouia-component-id="Vendor value"
              >
                test-vendor
              </dd>
              <dt
                aria-label="Version title"
                class=""
                data-ouia-component-id="Version title"
              >
                Version
              </dt>
              <dd
                aria-label="Version value"
                class=""
                data-ouia-component-id="Version value"
              >
                test-version
              </dd>
              <dt
                aria-label="Release date title"
                class=""
                data-ouia-component-id="Release date title"
              >
                Release date
              </dt>
              <dd
                aria-label="Release date value"
                class=""
                data-ouia-component-id="Release date value"
              >
                01 Apr 2014
              </dd>
              <dt
                aria-label="something title"
                class=""
                data-ouia-component-id="something title"
              >
                something
              </dt>
              <dd
                aria-label="something value"
                class=""
                data-ouia-component-id="something value"
              >
                test
              </dd>
              <dt
                aria-label="with click title"
                class=""
                data-ouia-component-id="with click title"
              >
                with click
              </dt>
              <dd
                aria-label="with click value"
                class=""
                data-ouia-component-id="with click value"
              >
                <div>
                  <a
                    href="//undefined"
                  >
                    1 tests
                  </a>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
